// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`a11y Results Formatter should format a11y issues as expected with default options for dom 0 1`] = `
"
    
    The test has failed the accessibility check. Accessibility Stacktrace/Issues:
    4 HTML elements have accessibility issue(s). 3 rules failed.
    
    (1) [document-title] Ensure each HTML document contains a non-empty <title> element
            * Error element(s) : 1
				(1) - HTML element : <html lang=\\"en\\"><head><style>* { pointer-events: all }</style></head><body>

<h1>Header One</h1>
<h1>Header Two</h1>
<div id=\\"dom-with-issues\\">
    <a href=\\"#\\"></a>
</div>


</body></html>
					- CSS selector(s) : html
					- HTML Tag Hierarchy : 
					- More Info: To solve the problem, you need to fix at least (1) of the following:
						• Document does not have a non-empty <title> element
            * Help:
                • Help URL: https://dequeuniversity.com/rules/axe/4.10/document-title
                • WCAG Criteria: SA11Y-WCAG-SC2.4.2-P2
(2) [link-name] Ensure links have discernible text
            * Error element(s) : 1
				(1) - HTML element : <a href=\\"#\\"></a>
					- CSS selector(s) : a
					- HTML Tag Hierarchy : 
					- More Info: To solve the problem, you need to fix at least (1) of the following:
						• Element does not have text that is visible to screen readers
						• aria-label attribute does not exist or is empty
						• aria-labelledby attribute does not exist, references elements that do not exist or references elements that are empty
						• Element has no title attribute
					- And fix the following:
						• Element is in tab order and does not have accessible text
            * Help:
                • Help URL: https://dequeuniversity.com/rules/axe/4.10/link-name
                • WCAG Criteria: SA11Y-WCAG-SC4.1.2-P1
(3) [region] Ensure all page content is contained by landmarks
            * Error element(s) : 2
				(1) - HTML element : <h1>Header One</h1>
					- CSS selector(s) : h1:nth-child(1)
					- HTML Tag Hierarchy : 
					- More Info: To solve the problem, you need to fix at least (1) of the following:
						• Some page content is not contained by landmarks
				(2) - HTML element : <h1>Header Two</h1>
					- CSS selector(s) : h1:nth-child(2)
					- HTML Tag Hierarchy : 
            * Help:
                • Help URL: https://dequeuniversity.com/rules/axe/4.10/region
                • WCAG Criteria: SA11Y-WCAG-SC1.3.1-P3
    
        
    For more info about automated accessibility testing: https://sfdc.co/a11y-test
    For tips on fixing accessibility bugs: https://sfdc.co/a11y
    For technical questions regarding Salesforce accessibility tools, contact our Sa11y team: http://sfdc.co/sa11y-users
    For guidance on accessibility related specifics, contact our A11y team: http://sfdc.co/tmp-a11y
        "
`;

exports[`a11y Results Formatter should format a11y issues as expected with default options for dom 0 2`] = `4`;

exports[`a11y Results Formatter should format a11y issues as expected with default options for dom 0 3`] = `
"4 Accessibility issues found
 
    
    The test has failed the accessibility check. Accessibility Stacktrace/Issues:
    4 HTML elements have accessibility issue(s). 3 rules failed.
    
    (1) [document-title] Ensure each HTML document contains a non-empty <title> element
            * Error element(s) : 1
				(1) - HTML element : <html lang=\\"en\\"><head><style>* { pointer-events: all }</style></head><body>

<h1>Header One</h1>
<h1>Header Two</h1>
<div id=\\"dom-with-issues\\">
    <a href=\\"#\\"></a>
</div>


</body></html>
					- CSS selector(s) : html
					- HTML Tag Hierarchy : 
					- More Info: To solve the problem, you need to fix at least (1) of the following:
						• Document does not have a non-empty <title> element
            * Help:
                • Help URL: https://dequeuniversity.com/rules/axe/4.10/document-title
                • WCAG Criteria: SA11Y-WCAG-SC2.4.2-P2
(2) [link-name] Ensure links have discernible text
            * Error element(s) : 1
				(1) - HTML element : <a href=\\"#\\"></a>
					- CSS selector(s) : a
					- HTML Tag Hierarchy : 
					- More Info: To solve the problem, you need to fix at least (1) of the following:
						• Element does not have text that is visible to screen readers
						• aria-label attribute does not exist or is empty
						• aria-labelledby attribute does not exist, references elements that do not exist or references elements that are empty
						• Element has no title attribute
					- And fix the following:
						• Element is in tab order and does not have accessible text
            * Help:
                • Help URL: https://dequeuniversity.com/rules/axe/4.10/link-name
                • WCAG Criteria: SA11Y-WCAG-SC4.1.2-P1
(3) [region] Ensure all page content is contained by landmarks
            * Error element(s) : 2
				(1) - HTML element : <h1>Header One</h1>
					- CSS selector(s) : h1:nth-child(1)
					- HTML Tag Hierarchy : 
					- More Info: To solve the problem, you need to fix at least (1) of the following:
						• Some page content is not contained by landmarks
				(2) - HTML element : <h1>Header Two</h1>
					- CSS selector(s) : h1:nth-child(2)
					- HTML Tag Hierarchy : 
            * Help:
                • Help URL: https://dequeuniversity.com/rules/axe/4.10/region
                • WCAG Criteria: SA11Y-WCAG-SC1.3.1-P3
    
        
    For more info about automated accessibility testing: https://sfdc.co/a11y-test
    For tips on fixing accessibility bugs: https://sfdc.co/a11y
    For technical questions regarding Salesforce accessibility tools, contact our Sa11y team: http://sfdc.co/sa11y-users
    For guidance on accessibility related specifics, contact our A11y team: http://sfdc.co/tmp-a11y
        "
`;

exports[`a11y Results Formatter should format a11y issues as expected with default options for dom 1 1`] = `
"
    
    The test has failed the accessibility check. Accessibility Stacktrace/Issues:
    0 HTML elements have accessibility issue(s). 0 rules failed.
    
    
    
        
    For more info about automated accessibility testing: https://sfdc.co/a11y-test
    For tips on fixing accessibility bugs: https://sfdc.co/a11y
    For technical questions regarding Salesforce accessibility tools, contact our Sa11y team: http://sfdc.co/sa11y-users
    For guidance on accessibility related specifics, contact our A11y team: http://sfdc.co/tmp-a11y
        "
`;

exports[`a11y Results Formatter should format a11y issues as expected with default options for dom 1 2`] = `0`;

exports[`a11y Results Formatter should format a11y issues as expected with default options for dom 1 3`] = `
"0 Accessibility issues found
 
    
    The test has failed the accessibility check. Accessibility Stacktrace/Issues:
    0 HTML elements have accessibility issue(s). 0 rules failed.
    
    
    
        
    For more info about automated accessibility testing: https://sfdc.co/a11y-test
    For tips on fixing accessibility bugs: https://sfdc.co/a11y
    For technical questions regarding Salesforce accessibility tools, contact our Sa11y team: http://sfdc.co/sa11y-users
    For guidance on accessibility related specifics, contact our A11y team: http://sfdc.co/tmp-a11y
        "
`;

exports[`a11y Results Formatter should format using specified options: 0 1`] = `"[{\\"id\\":\\"document-title\\",\\"impact\\":\\"serious\\",\\"tags\\":[\\"cat.text-alternatives\\",\\"wcag2a\\",\\"wcag242\\",\\"TTv5\\",\\"TT12.a\\",\\"EN-301-549\\",\\"EN-9.2.4.2\\",\\"ACT\\"],\\"description\\":\\"Ensure each HTML document contains a non-empty <title> element\\",\\"help\\":\\"Documents must have <title> element to aid in navigation\\",\\"helpUrl\\":\\"https://dequeuniversity.com/rules/axe/4.10/document-title?application=axeAPI\\",\\"nodes\\":[{\\"any\\":[{\\"id\\":\\"doc-has-title\\",\\"data\\":null,\\"relatedNodes\\":[],\\"impact\\":\\"serious\\",\\"message\\":\\"Document does not have a non-empty <title> element\\"}],\\"all\\":[],\\"none\\":[],\\"impact\\":\\"serious\\",\\"html\\":\\"<html lang=\\\\\\"en\\\\\\"><head><style>* { pointer-events: all }</style></head><body>\\\\n\\\\n<h1>Header One</h1>\\\\n<h1>Header Two</h1>\\\\n<div id=\\\\\\"dom-with-issues\\\\\\">\\\\n    <a href=\\\\\\"#\\\\\\"></a>\\\\n</div>\\\\n\\\\n\\\\n</body></html>\\",\\"target\\":[\\"html\\"],\\"failureSummary\\":\\"Fix any of the following:\\\\n  Document does not have a non-empty <title> element\\"}]},{\\"id\\":\\"link-name\\",\\"impact\\":\\"serious\\",\\"tags\\":[\\"cat.name-role-value\\",\\"wcag2a\\",\\"wcag244\\",\\"wcag412\\",\\"section508\\",\\"section508.22.a\\",\\"TTv5\\",\\"TT6.a\\",\\"EN-301-549\\",\\"EN-9.2.4.4\\",\\"EN-9.4.1.2\\",\\"ACT\\"],\\"description\\":\\"Ensure links have discernible text\\",\\"help\\":\\"Links must have discernible text\\",\\"helpUrl\\":\\"https://dequeuniversity.com/rules/axe/4.10/link-name?application=axeAPI\\",\\"nodes\\":[{\\"any\\":[{\\"id\\":\\"has-visible-text\\",\\"data\\":null,\\"relatedNodes\\":[],\\"impact\\":\\"serious\\",\\"message\\":\\"Element does not have text that is visible to screen readers\\"},{\\"id\\":\\"aria-label\\",\\"data\\":null,\\"relatedNodes\\":[],\\"impact\\":\\"serious\\",\\"message\\":\\"aria-label attribute does not exist or is empty\\"},{\\"id\\":\\"aria-labelledby\\",\\"data\\":null,\\"relatedNodes\\":[],\\"impact\\":\\"serious\\",\\"message\\":\\"aria-labelledby attribute does not exist, references elements that do not exist or references elements that are empty\\"},{\\"id\\":\\"non-empty-title\\",\\"data\\":{\\"messageKey\\":\\"noAttr\\"},\\"relatedNodes\\":[],\\"impact\\":\\"serious\\",\\"message\\":\\"Element has no title attribute\\"}],\\"all\\":[],\\"none\\":[{\\"id\\":\\"focusable-no-name\\",\\"data\\":null,\\"relatedNodes\\":[],\\"impact\\":\\"serious\\",\\"message\\":\\"Element is in tab order and does not have accessible text\\"}],\\"impact\\":\\"serious\\",\\"html\\":\\"<a href=\\\\\\"#\\\\\\"></a>\\",\\"target\\":[\\"a\\"],\\"failureSummary\\":\\"Fix all of the following:\\\\n  Element is in tab order and does not have accessible text\\\\n\\\\nFix any of the following:\\\\n  Element does not have text that is visible to screen readers\\\\n  aria-label attribute does not exist or is empty\\\\n  aria-labelledby attribute does not exist, references elements that do not exist or references elements that are empty\\\\n  Element has no title attribute\\"}]},{\\"id\\":\\"region\\",\\"impact\\":\\"moderate\\",\\"tags\\":[\\"cat.keyboard\\",\\"best-practice\\"],\\"description\\":\\"Ensure all page content is contained by landmarks\\",\\"help\\":\\"All page content should be contained by landmarks\\",\\"helpUrl\\":\\"https://dequeuniversity.com/rules/axe/4.10/region?application=axeAPI\\",\\"nodes\\":[{\\"any\\":[{\\"id\\":\\"region\\",\\"data\\":{\\"isIframe\\":false},\\"relatedNodes\\":[],\\"impact\\":\\"moderate\\",\\"message\\":\\"Some page content is not contained by landmarks\\"}],\\"all\\":[],\\"none\\":[],\\"impact\\":\\"moderate\\",\\"html\\":\\"<h1>Header One</h1>\\",\\"target\\":[\\"h1:nth-child(1)\\"],\\"failureSummary\\":\\"Fix any of the following:\\\\n  Some page content is not contained by landmarks\\"},{\\"any\\":[{\\"id\\":\\"region\\",\\"data\\":{\\"isIframe\\":false},\\"relatedNodes\\":[],\\"impact\\":\\"moderate\\",\\"message\\":\\"Some page content is not contained by landmarks\\"}],\\"all\\":[],\\"none\\":[],\\"impact\\":\\"moderate\\",\\"html\\":\\"<h1>Header Two</h1>\\",\\"target\\":[\\"h1:nth-child(2)\\"],\\"failureSummary\\":\\"Fix any of the following:\\\\n  Some page content is not contained by landmarks\\"}]}]"`;

exports[`a11y Results Formatter should format using specified options: 1 1`] = `
"
    
    The test has failed the accessibility check. Accessibility Stacktrace/Issues:
    4 HTML elements have accessibility issue(s). 3 rules failed.
    
    (1) [document-title] Ensure each HTML document contains a non-empty <title> element
            * Error element(s) : 1
				(1) - HTML element : <html lang=\\"en\\"><head><style>* { pointer-events: all }</style></head><body>

<h1>Header One</h1>
<h1>Header Two</h1>
<div id=\\"dom-with-issues\\">
    <a href=\\"#\\"></a>
</div>


</body></html>
					- CSS selector(s) : html
					- HTML Tag Hierarchy : 
					- More Info: To solve the problem, you need to fix at least (1) of the following:
						• Document does not have a non-empty <title> element
            * Help:
                • Help URL: https://dequeuniversity.com/rules/axe/4.10/document-title
                • WCAG Criteria: SA11Y-WCAG-SC2.4.2-P2
(2) [link-name] Ensure links have discernible text
            * Error element(s) : 1
				(1) - HTML element : <a href=\\"#\\"></a>
					- CSS selector(s) : a
					- HTML Tag Hierarchy : 
					- More Info: To solve the problem, you need to fix at least (1) of the following:
						• Element does not have text that is visible to screen readers
						• aria-label attribute does not exist or is empty
						• aria-labelledby attribute does not exist, references elements that do not exist or references elements that are empty
						• Element has no title attribute
					- And fix the following:
						• Element is in tab order and does not have accessible text
            * Help:
                • Help URL: https://dequeuniversity.com/rules/axe/4.10/link-name
                • WCAG Criteria: SA11Y-WCAG-SC4.1.2-P1
(3) [region] Ensure all page content is contained by landmarks
            * Error element(s) : 2
				(1) - HTML element : <h1>Header One</h1>
					- CSS selector(s) : h1:nth-child(1)
					- HTML Tag Hierarchy : 
					- More Info: To solve the problem, you need to fix at least (1) of the following:
						• Some page content is not contained by landmarks
				(2) - HTML element : <h1>Header Two</h1>
					- CSS selector(s) : h1:nth-child(2)
					- HTML Tag Hierarchy : 
            * Help:
                • Help URL: https://dequeuniversity.com/rules/axe/4.10/region
                • WCAG Criteria: SA11Y-WCAG-SC1.3.1-P3
    
        
    For more info about automated accessibility testing: https://sfdc.co/a11y-test
    For tips on fixing accessibility bugs: https://sfdc.co/a11y
    For technical questions regarding Salesforce accessibility tools, contact our Sa11y team: http://sfdc.co/sa11y-users
    For guidance on accessibility related specifics, contact our A11y team: http://sfdc.co/tmp-a11y
        "
`;

exports[`a11y Results Formatter should format using specified options: 2 1`] = `
"
    
    The test has failed the accessibility check. Accessibility Stacktrace/Issues:
    4 HTML elements have accessibility issue(s). 3 rules failed.
    
    (1) [document-title] Ensure each HTML document contains a non-empty <title> element
            * Error element(s) : 1
				(1) - HTML element : <html lang=\\"en\\"><head><style>* { pointer-events: all }</style></head><body>

<h1>Header One</h1>
<h1>Header Two</h1>
<div id=\\"dom-with-issues\\">
    <a href=\\"#\\"></a>
</div>


</body></html>
					- CSS selector(s) : html
					- HTML Tag Hierarchy : 
					- More Info: To solve the problem, you need to fix at least (1) of the following:
						• Document does not have a non-empty <title> element
            * Help:
                • Help URL: https://dequeuniversity.com/rules/axe/4.10/document-title
                • WCAG Criteria: SA11Y-WCAG-SC2.4.2-P2
(2) [link-name] Ensure links have discernible text
            * Error element(s) : 1
				(1) - HTML element : <a href=\\"#\\"></a>
					- CSS selector(s) : a
					- HTML Tag Hierarchy : 
					- More Info: To solve the problem, you need to fix at least (1) of the following:
						• Element does not have text that is visible to screen readers
						• aria-label attribute does not exist or is empty
						• aria-labelledby attribute does not exist, references elements that do not exist or references elements that are empty
						• Element has no title attribute
					- And fix the following:
						• Element is in tab order and does not have accessible text
            * Help:
                • Help URL: https://dequeuniversity.com/rules/axe/4.10/link-name
                • WCAG Criteria: SA11Y-WCAG-SC4.1.2-P1
(3) [region] Ensure all page content is contained by landmarks
            * Error element(s) : 2
				(1) - HTML element : <h1>Header One</h1>
					- CSS selector(s) : h1:nth-child(1)
					- HTML Tag Hierarchy : 
					- More Info: To solve the problem, you need to fix at least (1) of the following:
						• Some page content is not contained by landmarks
				(2) - HTML element : <h1>Header Two</h1>
					- CSS selector(s) : h1:nth-child(2)
					- HTML Tag Hierarchy : 
            * Help:
                • Help URL: https://dequeuniversity.com/rules/axe/4.10/region
                • WCAG Criteria: SA11Y-WCAG-SC1.3.1-P3
    
        
    For more info about automated accessibility testing: https://sfdc.co/a11y-test
    For tips on fixing accessibility bugs: https://sfdc.co/a11y
    For technical questions regarding Salesforce accessibility tools, contact our Sa11y team: http://sfdc.co/sa11y-users
    For guidance on accessibility related specifics, contact our A11y team: http://sfdc.co/tmp-a11y
        "
`;

exports[`a11y Results Formatter should format using specified options: 3 1`] = `
"
    
    The test has failed the accessibility check. Accessibility Stacktrace/Issues:
    4 HTML elements have accessibility issue(s). 3 rules failed.
    
    (1) [document-title] Ensure each HTML document contains a non-empty <title> element
            * Error element(s) : 1
				(1) - HTML element : <html lang=\\"en\\"><head><style>* { pointer-events: all }</style></head><body>

<h1>Header One</h1>
<h1>Header Two</h1>
<div id=\\"dom-with-issues\\">
    <a href=\\"#\\"></a>
</div>


</body></html>
					- CSS selector(s) : html
					- HTML Tag Hierarchy : 
					- More Info: To solve the problem, you need to fix at least (1) of the following:
						• Document does not have a non-empty <title> element
            * Help:
                • Help URL: https://dequeuniversity.com/rules/axe/4.10/document-title
                • WCAG Criteria: SA11Y-WCAG-SC2.4.2-P2
(2) [link-name] Ensure links have discernible text
            * Error element(s) : 1
				(1) - HTML element : <a href=\\"#\\"></a>
					- CSS selector(s) : a
					- HTML Tag Hierarchy : 
					- More Info: To solve the problem, you need to fix at least (1) of the following:
						• Element does not have text that is visible to screen readers
						• aria-label attribute does not exist or is empty
						• aria-labelledby attribute does not exist, references elements that do not exist or references elements that are empty
						• Element has no title attribute
					- And fix the following:
						• Element is in tab order and does not have accessible text
            * Help:
                • Help URL: https://dequeuniversity.com/rules/axe/4.10/link-name
                • WCAG Criteria: SA11Y-WCAG-SC4.1.2-P1
(3) [region] Ensure all page content is contained by landmarks
            * Error element(s) : 2
				(1) - HTML element : <h1>Header One</h1>
					- CSS selector(s) : h1:nth-child(1)
					- HTML Tag Hierarchy : 
					- More Info: To solve the problem, you need to fix at least (1) of the following:
						• Some page content is not contained by landmarks
				(2) - HTML element : <h1>Header Two</h1>
					- CSS selector(s) : h1:nth-child(2)
					- HTML Tag Hierarchy : 
            * Help:
                • Help URL: https://dequeuniversity.com/rules/axe/4.10/region
                • WCAG Criteria: SA11Y-WCAG-SC1.3.1-P3
    
        
    For more info about automated accessibility testing: https://sfdc.co/a11y-test
    For tips on fixing accessibility bugs: https://sfdc.co/a11y
    For technical questions regarding Salesforce accessibility tools, contact our Sa11y team: http://sfdc.co/sa11y-users
    For guidance on accessibility related specifics, contact our A11y team: http://sfdc.co/tmp-a11y
        "
`;

exports[`a11y Results Formatter should format using specified options: 4 1`] = `
"
    
    The test has failed the accessibility check. Accessibility Stacktrace/Issues:
    4 HTML elements have accessibility issue(s). 3 rules failed.
    
    (1) [document-title] Ensure each HTML document contains a non-empty <title> element
            * Error element(s) : 1
				(1) - HTML element : <html lang=\\"en\\"><head><style>* { pointer-events: all }</style></head><body>

<h1>Header One</h1>
<h1>Header Two</h1>
<div id=\\"dom-with-issues\\">
    <a href=\\"#\\"></a>
</div>


</body></html>
					- CSS selector(s) : html
					- HTML Tag Hierarchy : 
					- More Info: To solve the problem, you need to fix at least (1) of the following:
						• Document does not have a non-empty <title> element
            * Help:
                • Help URL: https://dequeuniversity.com/rules/axe/4.10/document-title
                • WCAG Criteria: SA11Y-WCAG-SC2.4.2-P2
(2) [link-name] Ensure links have discernible text
            * Error element(s) : 1
				(1) - HTML element : <a href=\\"#\\"></a>
					- CSS selector(s) : a
					- HTML Tag Hierarchy : 
					- More Info: To solve the problem, you need to fix at least (1) of the following:
						• Element does not have text that is visible to screen readers
						• aria-label attribute does not exist or is empty
						• aria-labelledby attribute does not exist, references elements that do not exist or references elements that are empty
						• Element has no title attribute
					- And fix the following:
						• Element is in tab order and does not have accessible text
            * Help:
                • Help URL: https://dequeuniversity.com/rules/axe/4.10/link-name
                • WCAG Criteria: SA11Y-WCAG-SC4.1.2-P1
(3) [region] Ensure all page content is contained by landmarks
            * Error element(s) : 2
				(1) - HTML element : <h1>Header One</h1>
					- CSS selector(s) : h1:nth-child(1)
					- HTML Tag Hierarchy : 
					- More Info: To solve the problem, you need to fix at least (1) of the following:
						• Some page content is not contained by landmarks
				(2) - HTML element : <h1>Header Two</h1>
					- CSS selector(s) : h1:nth-child(2)
					- HTML Tag Hierarchy : 
            * Help:
                • Help URL: https://dequeuniversity.com/rules/axe/4.10/region
                • WCAG Criteria: SA11Y-WCAG-SC1.3.1-P3
    
        
    For more info about automated accessibility testing: https://sfdc.co/a11y-test
    For tips on fixing accessibility bugs: https://sfdc.co/a11y
    For technical questions regarding Salesforce accessibility tools, contact our Sa11y team: http://sfdc.co/sa11y-users
    For guidance on accessibility related specifics, contact our A11y team: http://sfdc.co/tmp-a11y
        "
`;

exports[`a11y Results Formatter should not throw error for repeated violations with consolidation 1`] = `
"4 Accessibility issues found
 
    
    The test has failed the accessibility check. Accessibility Stacktrace/Issues:
    4 HTML elements have accessibility issue(s). 3 rules failed.
    
    (1) [document-title] Ensure each HTML document contains a non-empty <title> element
            * Error element(s) : 1
				(1) - HTML element : <html lang=\\"en\\"><head><style>* { pointer-events: all }</style></head><body>

<h1>Header One</h1>
<h1>Header Two</h1>
<div id=\\"dom-with-issues\\">
    <a href=\\"#\\"></a>
</div>


</body></html>
					- CSS selector(s) : html
					- HTML Tag Hierarchy : 
					- More Info: To solve the problem, you need to fix at least (1) of the following:
						• Document does not have a non-empty <title> element
            * Help:
                • Help URL: https://dequeuniversity.com/rules/axe/4.10/document-title
                • WCAG Criteria: SA11Y-WCAG-SC2.4.2-P2
(2) [link-name] Ensure links have discernible text
            * Error element(s) : 1
				(1) - HTML element : <a href=\\"#\\"></a>
					- CSS selector(s) : a
					- HTML Tag Hierarchy : 
					- More Info: To solve the problem, you need to fix at least (1) of the following:
						• Element does not have text that is visible to screen readers
						• aria-label attribute does not exist or is empty
						• aria-labelledby attribute does not exist, references elements that do not exist or references elements that are empty
						• Element has no title attribute
					- And fix the following:
						• Element is in tab order and does not have accessible text
            * Help:
                • Help URL: https://dequeuniversity.com/rules/axe/4.10/link-name
                • WCAG Criteria: SA11Y-WCAG-SC4.1.2-P1
(3) [region] Ensure all page content is contained by landmarks
            * Error element(s) : 2
				(1) - HTML element : <h1>Header One</h1>
					- CSS selector(s) : h1:nth-child(1)
					- HTML Tag Hierarchy : 
					- More Info: To solve the problem, you need to fix at least (1) of the following:
						• Some page content is not contained by landmarks
				(2) - HTML element : <h1>Header Two</h1>
					- CSS selector(s) : h1:nth-child(2)
					- HTML Tag Hierarchy : 
            * Help:
                • Help URL: https://dequeuniversity.com/rules/axe/4.10/region
                • WCAG Criteria: SA11Y-WCAG-SC1.3.1-P3
    
        
    For more info about automated accessibility testing: https://sfdc.co/a11y-test
    For tips on fixing accessibility bugs: https://sfdc.co/a11y
    For technical questions regarding Salesforce accessibility tools, contact our Sa11y team: http://sfdc.co/sa11y-users
    For guidance on accessibility related specifics, contact our A11y team: http://sfdc.co/tmp-a11y
        "
`;

exports[`a11y Results Formatter should not throw error for repeated violations with consolidation 2`] = `
"4 Accessibility issues found
 
    
    The test has failed the accessibility check. Accessibility Stacktrace/Issues:
    4 HTML elements have accessibility issue(s). 3 rules failed.
    
    (1) [document-title] Ensure each HTML document contains a non-empty <title> element
            * Error element(s) : 1
				(1) - HTML element : <html lang=\\"en\\"><head><style>* { pointer-events: all }</style></head><body>

<h1>Header One</h1>
<h1>Header Two</h1>
<div id=\\"dom-with-issues\\">
    <a href=\\"#\\"></a>
</div>


</body></html>
					- CSS selector(s) : html
					- HTML Tag Hierarchy : 
					- More Info: To solve the problem, you need to fix at least (1) of the following:
						• Document does not have a non-empty <title> element
            * Help:
                • Help URL: https://dequeuniversity.com/rules/axe/4.10/document-title
                • WCAG Criteria: SA11Y-WCAG-SC2.4.2-P2
(2) [link-name] Ensure links have discernible text
            * Error element(s) : 1
				(1) - HTML element : <a href=\\"#\\"></a>
					- CSS selector(s) : a
					- HTML Tag Hierarchy : 
					- More Info: To solve the problem, you need to fix at least (1) of the following:
						• Element does not have text that is visible to screen readers
						• aria-label attribute does not exist or is empty
						• aria-labelledby attribute does not exist, references elements that do not exist or references elements that are empty
						• Element has no title attribute
					- And fix the following:
						• Element is in tab order and does not have accessible text
            * Help:
                • Help URL: https://dequeuniversity.com/rules/axe/4.10/link-name
                • WCAG Criteria: SA11Y-WCAG-SC4.1.2-P1
(3) [region] Ensure all page content is contained by landmarks
            * Error element(s) : 2
				(1) - HTML element : <h1>Header One</h1>
					- CSS selector(s) : h1:nth-child(1)
					- HTML Tag Hierarchy : 
					- More Info: To solve the problem, you need to fix at least (1) of the following:
						• Some page content is not contained by landmarks
				(2) - HTML element : <h1>Header Two</h1>
					- CSS selector(s) : h1:nth-child(2)
					- HTML Tag Hierarchy : 
            * Help:
                • Help URL: https://dequeuniversity.com/rules/axe/4.10/region
                • WCAG Criteria: SA11Y-WCAG-SC1.3.1-P3
    
        
    For more info about automated accessibility testing: https://sfdc.co/a11y-test
    For tips on fixing accessibility bugs: https://sfdc.co/a11y
    For technical questions regarding Salesforce accessibility tools, contact our Sa11y team: http://sfdc.co/sa11y-users
    For guidance on accessibility related specifics, contact our A11y team: http://sfdc.co/tmp-a11y
        "
`;

exports[`a11y Results Formatter should throw error when violations are present 1`] = `
"4 Accessibility issues found
 
    
    The test has failed the accessibility check. Accessibility Stacktrace/Issues:
    4 HTML elements have accessibility issue(s). 3 rules failed.
    
    (1) [document-title] Ensure each HTML document contains a non-empty <title> element
            * Error element(s) : 1
				(1) - HTML element : <html lang=\\"en\\"><head><style>* { pointer-events: all }</style></head><body>

<h1>Header One</h1>
<h1>Header Two</h1>
<div id=\\"dom-with-issues\\">
    <a href=\\"#\\"></a>
</div>


</body></html>
					- CSS selector(s) : html
					- HTML Tag Hierarchy : 
					- More Info: To solve the problem, you need to fix at least (1) of the following:
						• Document does not have a non-empty <title> element
            * Help:
                • Help URL: https://dequeuniversity.com/rules/axe/4.10/document-title
                • WCAG Criteria: SA11Y-WCAG-SC2.4.2-P2
(2) [link-name] Ensure links have discernible text
            * Error element(s) : 1
				(1) - HTML element : <a href=\\"#\\"></a>
					- CSS selector(s) : a
					- HTML Tag Hierarchy : 
					- More Info: To solve the problem, you need to fix at least (1) of the following:
						• Element does not have text that is visible to screen readers
						• aria-label attribute does not exist or is empty
						• aria-labelledby attribute does not exist, references elements that do not exist or references elements that are empty
						• Element has no title attribute
					- And fix the following:
						• Element is in tab order and does not have accessible text
            * Help:
                • Help URL: https://dequeuniversity.com/rules/axe/4.10/link-name
                • WCAG Criteria: SA11Y-WCAG-SC4.1.2-P1
(3) [region] Ensure all page content is contained by landmarks
            * Error element(s) : 2
				(1) - HTML element : <h1>Header One</h1>
					- CSS selector(s) : h1:nth-child(1)
					- HTML Tag Hierarchy : 
					- More Info: To solve the problem, you need to fix at least (1) of the following:
						• Some page content is not contained by landmarks
				(2) - HTML element : <h1>Header Two</h1>
					- CSS selector(s) : h1:nth-child(2)
					- HTML Tag Hierarchy : 
            * Help:
                • Help URL: https://dequeuniversity.com/rules/axe/4.10/region
                • WCAG Criteria: SA11Y-WCAG-SC1.3.1-P3
    
        
    For more info about automated accessibility testing: https://sfdc.co/a11y-test
    For tips on fixing accessibility bugs: https://sfdc.co/a11y
    For technical questions regarding Salesforce accessibility tools, contact our Sa11y team: http://sfdc.co/sa11y-users
    For guidance on accessibility related specifics, contact our A11y team: http://sfdc.co/tmp-a11y
        "
`;

exports[`a11y results filter should be setup with violations that can be reused across tests 1`] = `
Array [
  Object {
    "description": "Ensure each HTML document contains a non-empty <title> element",
    "help": "Documents must have <title> element to aid in navigation",
    "helpUrl": "https://dequeuniversity.com/rules/axe/4.10/document-title?application=axeAPI",
    "id": "document-title",
    "impact": "serious",
    "nodes": Array [
      Object {
        "all": Array [],
        "any": Array [
          CheckResult {
            "data": null,
            "id": "doc-has-title",
            "impact": "serious",
            "message": "Document does not have a non-empty <title> element",
            "relatedNodes": Array [],
          },
        ],
        "failureSummary": "Fix any of the following:
  Document does not have a non-empty <title> element",
        "html": "<html><head></head><body>

<h1>Header One</h1>
<h1>Header Two</h1>
<div id=\\"dom-with-issues\\">
    <a href=\\"#\\"></a>
</div>


</body></html>",
        "impact": "serious",
        "none": Array [],
        "target": Array [
          "html",
        ],
      },
    ],
    "tags": Array [
      "cat.text-alternatives",
      "wcag2a",
      "wcag242",
      "TTv5",
      "TT12.a",
      "EN-301-549",
      "EN-9.2.4.2",
      "ACT",
    ],
  },
  Object {
    "description": "Ensure every HTML document has a lang attribute",
    "help": "<html> element must have a lang attribute",
    "helpUrl": "https://dequeuniversity.com/rules/axe/4.10/html-has-lang?application=axeAPI",
    "id": "html-has-lang",
    "impact": "serious",
    "nodes": Array [
      Object {
        "all": Array [],
        "any": Array [
          CheckResult {
            "data": Object {
              "messageKey": "noLang",
            },
            "id": "has-lang",
            "impact": "serious",
            "message": "The <html> element does not have a lang attribute",
            "relatedNodes": Array [],
          },
        ],
        "failureSummary": "Fix any of the following:
  The <html> element does not have a lang attribute",
        "html": "<html><head></head><body>

<h1>Header One</h1>
<h1>Header Two</h1>
<div id=\\"dom-with-issues\\">
    <a href=\\"#\\"></a>
</div>


</body></html>",
        "impact": "serious",
        "none": Array [],
        "target": Array [
          "html",
        ],
      },
    ],
    "tags": Array [
      "cat.language",
      "wcag2a",
      "wcag311",
      "TTv5",
      "TT11.a",
      "EN-301-549",
      "EN-9.3.1.1",
      "ACT",
    ],
  },
  Object {
    "description": "Ensure links have discernible text",
    "help": "Links must have discernible text",
    "helpUrl": "https://dequeuniversity.com/rules/axe/4.10/link-name?application=axeAPI",
    "id": "link-name",
    "impact": "serious",
    "nodes": Array [
      Object {
        "all": Array [],
        "any": Array [
          CheckResult {
            "data": null,
            "id": "has-visible-text",
            "impact": "serious",
            "message": "Element does not have text that is visible to screen readers",
            "relatedNodes": Array [],
          },
          CheckResult {
            "data": null,
            "id": "aria-label",
            "impact": "serious",
            "message": "aria-label attribute does not exist or is empty",
            "relatedNodes": Array [],
          },
          CheckResult {
            "data": null,
            "id": "aria-labelledby",
            "impact": "serious",
            "message": "aria-labelledby attribute does not exist, references elements that do not exist or references elements that are empty",
            "relatedNodes": Array [],
          },
          CheckResult {
            "data": Object {
              "messageKey": "noAttr",
            },
            "id": "non-empty-title",
            "impact": "serious",
            "message": "Element has no title attribute",
            "relatedNodes": Array [],
          },
        ],
        "failureSummary": "Fix all of the following:
  Element is in tab order and does not have accessible text

Fix any of the following:
  Element does not have text that is visible to screen readers
  aria-label attribute does not exist or is empty
  aria-labelledby attribute does not exist, references elements that do not exist or references elements that are empty
  Element has no title attribute",
        "html": "<a href=\\"#\\"></a>",
        "impact": "serious",
        "none": Array [
          CheckResult {
            "data": null,
            "id": "focusable-no-name",
            "impact": "serious",
            "message": "Element is in tab order and does not have accessible text",
            "relatedNodes": Array [],
          },
        ],
        "target": Array [
          "a",
        ],
      },
    ],
    "tags": Array [
      "cat.name-role-value",
      "wcag2a",
      "wcag244",
      "wcag412",
      "section508",
      "section508.22.a",
      "TTv5",
      "TT6.a",
      "EN-301-549",
      "EN-9.2.4.4",
      "EN-9.4.1.2",
      "ACT",
    ],
  },
  Object {
    "description": "Ensure all page content is contained by landmarks",
    "help": "All page content should be contained by landmarks",
    "helpUrl": "https://dequeuniversity.com/rules/axe/4.10/region?application=axeAPI",
    "id": "region",
    "impact": "moderate",
    "nodes": Array [
      Object {
        "all": Array [],
        "any": Array [
          CheckResult {
            "data": Object {
              "isIframe": false,
            },
            "id": "region",
            "impact": "moderate",
            "message": "Some page content is not contained by landmarks",
            "relatedNodes": Array [],
          },
        ],
        "failureSummary": "Fix any of the following:
  Some page content is not contained by landmarks",
        "html": "<h1>Header One</h1>",
        "impact": "moderate",
        "none": Array [],
        "target": Array [
          "h1:nth-child(1)",
        ],
      },
      Object {
        "all": Array [],
        "any": Array [
          CheckResult {
            "data": Object {
              "isIframe": false,
            },
            "id": "region",
            "impact": "moderate",
            "message": "Some page content is not contained by landmarks",
            "relatedNodes": Array [],
          },
        ],
        "failureSummary": "Fix any of the following:
  Some page content is not contained by landmarks",
        "html": "<h1>Header Two</h1>",
        "impact": "moderate",
        "none": Array [],
        "target": Array [
          "h1:nth-child(2)",
        ],
      },
    ],
    "tags": Array [
      "cat.keyboard",
      "best-practice",
    ],
  },
]
`;

exports[`a11y results filter should filter results for matching exception list 0 1`] = `
Array [
  Object {
    "description": "Ensure every HTML document has a lang attribute",
    "help": "<html> element must have a lang attribute",
    "helpUrl": "https://dequeuniversity.com/rules/axe/4.10/html-has-lang?application=axeAPI",
    "id": "html-has-lang",
    "impact": "serious",
    "nodes": Array [
      Object {
        "all": Array [],
        "any": Array [
          CheckResult {
            "data": Object {
              "messageKey": "noLang",
            },
            "id": "has-lang",
            "impact": "serious",
            "message": "The <html> element does not have a lang attribute",
            "relatedNodes": Array [],
          },
        ],
        "failureSummary": "Fix any of the following:
  The <html> element does not have a lang attribute",
        "html": "<html><head></head><body>

<h1>Header One</h1>
<h1>Header Two</h1>
<div id=\\"dom-with-issues\\">
    <a href=\\"#\\"></a>
</div>


</body></html>",
        "impact": "serious",
        "none": Array [],
        "target": Array [
          "html",
        ],
      },
    ],
    "tags": Array [
      "cat.language",
      "wcag2a",
      "wcag311",
      "TTv5",
      "TT11.a",
      "EN-301-549",
      "EN-9.3.1.1",
      "ACT",
    ],
  },
  Object {
    "description": "Ensure links have discernible text",
    "help": "Links must have discernible text",
    "helpUrl": "https://dequeuniversity.com/rules/axe/4.10/link-name?application=axeAPI",
    "id": "link-name",
    "impact": "serious",
    "nodes": Array [
      Object {
        "all": Array [],
        "any": Array [
          CheckResult {
            "data": null,
            "id": "has-visible-text",
            "impact": "serious",
            "message": "Element does not have text that is visible to screen readers",
            "relatedNodes": Array [],
          },
          CheckResult {
            "data": null,
            "id": "aria-label",
            "impact": "serious",
            "message": "aria-label attribute does not exist or is empty",
            "relatedNodes": Array [],
          },
          CheckResult {
            "data": null,
            "id": "aria-labelledby",
            "impact": "serious",
            "message": "aria-labelledby attribute does not exist, references elements that do not exist or references elements that are empty",
            "relatedNodes": Array [],
          },
          CheckResult {
            "data": Object {
              "messageKey": "noAttr",
            },
            "id": "non-empty-title",
            "impact": "serious",
            "message": "Element has no title attribute",
            "relatedNodes": Array [],
          },
        ],
        "failureSummary": "Fix all of the following:
  Element is in tab order and does not have accessible text

Fix any of the following:
  Element does not have text that is visible to screen readers
  aria-label attribute does not exist or is empty
  aria-labelledby attribute does not exist, references elements that do not exist or references elements that are empty
  Element has no title attribute",
        "html": "<a href=\\"#\\"></a>",
        "impact": "serious",
        "none": Array [
          CheckResult {
            "data": null,
            "id": "focusable-no-name",
            "impact": "serious",
            "message": "Element is in tab order and does not have accessible text",
            "relatedNodes": Array [],
          },
        ],
        "target": Array [
          "a",
        ],
      },
    ],
    "tags": Array [
      "cat.name-role-value",
      "wcag2a",
      "wcag244",
      "wcag412",
      "section508",
      "section508.22.a",
      "TTv5",
      "TT6.a",
      "EN-301-549",
      "EN-9.2.4.4",
      "EN-9.4.1.2",
      "ACT",
    ],
  },
  Object {
    "description": "Ensure all page content is contained by landmarks",
    "help": "All page content should be contained by landmarks",
    "helpUrl": "https://dequeuniversity.com/rules/axe/4.10/region?application=axeAPI",
    "id": "region",
    "impact": "moderate",
    "nodes": Array [
      Object {
        "all": Array [],
        "any": Array [
          CheckResult {
            "data": Object {
              "isIframe": false,
            },
            "id": "region",
            "impact": "moderate",
            "message": "Some page content is not contained by landmarks",
            "relatedNodes": Array [],
          },
        ],
        "failureSummary": "Fix any of the following:
  Some page content is not contained by landmarks",
        "html": "<h1>Header One</h1>",
        "impact": "moderate",
        "none": Array [],
        "target": Array [
          "h1:nth-child(1)",
        ],
      },
      Object {
        "all": Array [],
        "any": Array [
          CheckResult {
            "data": Object {
              "isIframe": false,
            },
            "id": "region",
            "impact": "moderate",
            "message": "Some page content is not contained by landmarks",
            "relatedNodes": Array [],
          },
        ],
        "failureSummary": "Fix any of the following:
  Some page content is not contained by landmarks",
        "html": "<h1>Header Two</h1>",
        "impact": "moderate",
        "none": Array [],
        "target": Array [
          "h1:nth-child(2)",
        ],
      },
    ],
    "tags": Array [
      "cat.keyboard",
      "best-practice",
    ],
  },
]
`;

exports[`a11y results filter should filter results for matching exception list 1 1`] = `
Array [
  Object {
    "description": "Ensure each HTML document contains a non-empty <title> element",
    "help": "Documents must have <title> element to aid in navigation",
    "helpUrl": "https://dequeuniversity.com/rules/axe/4.10/document-title?application=axeAPI",
    "id": "document-title",
    "impact": "serious",
    "nodes": Array [
      Object {
        "all": Array [],
        "any": Array [
          CheckResult {
            "data": null,
            "id": "doc-has-title",
            "impact": "serious",
            "message": "Document does not have a non-empty <title> element",
            "relatedNodes": Array [],
          },
        ],
        "failureSummary": "Fix any of the following:
  Document does not have a non-empty <title> element",
        "html": "<html><head></head><body>

<h1>Header One</h1>
<h1>Header Two</h1>
<div id=\\"dom-with-issues\\">
    <a href=\\"#\\"></a>
</div>


</body></html>",
        "impact": "serious",
        "none": Array [],
        "target": Array [
          "html",
        ],
      },
    ],
    "tags": Array [
      "cat.text-alternatives",
      "wcag2a",
      "wcag242",
      "TTv5",
      "TT12.a",
      "EN-301-549",
      "EN-9.2.4.2",
      "ACT",
    ],
  },
  Object {
    "description": "Ensure every HTML document has a lang attribute",
    "help": "<html> element must have a lang attribute",
    "helpUrl": "https://dequeuniversity.com/rules/axe/4.10/html-has-lang?application=axeAPI",
    "id": "html-has-lang",
    "impact": "serious",
    "nodes": Array [
      Object {
        "all": Array [],
        "any": Array [
          CheckResult {
            "data": Object {
              "messageKey": "noLang",
            },
            "id": "has-lang",
            "impact": "serious",
            "message": "The <html> element does not have a lang attribute",
            "relatedNodes": Array [],
          },
        ],
        "failureSummary": "Fix any of the following:
  The <html> element does not have a lang attribute",
        "html": "<html><head></head><body>

<h1>Header One</h1>
<h1>Header Two</h1>
<div id=\\"dom-with-issues\\">
    <a href=\\"#\\"></a>
</div>


</body></html>",
        "impact": "serious",
        "none": Array [],
        "target": Array [
          "html",
        ],
      },
    ],
    "tags": Array [
      "cat.language",
      "wcag2a",
      "wcag311",
      "TTv5",
      "TT11.a",
      "EN-301-549",
      "EN-9.3.1.1",
      "ACT",
    ],
  },
  Object {
    "description": "Ensure all page content is contained by landmarks",
    "help": "All page content should be contained by landmarks",
    "helpUrl": "https://dequeuniversity.com/rules/axe/4.10/region?application=axeAPI",
    "id": "region",
    "impact": "moderate",
    "nodes": Array [
      Object {
        "all": Array [],
        "any": Array [
          CheckResult {
            "data": Object {
              "isIframe": false,
            },
            "id": "region",
            "impact": "moderate",
            "message": "Some page content is not contained by landmarks",
            "relatedNodes": Array [],
          },
        ],
        "failureSummary": "Fix any of the following:
  Some page content is not contained by landmarks",
        "html": "<h1>Header One</h1>",
        "impact": "moderate",
        "none": Array [],
        "target": Array [
          "h1:nth-child(1)",
        ],
      },
      Object {
        "all": Array [],
        "any": Array [
          CheckResult {
            "data": Object {
              "isIframe": false,
            },
            "id": "region",
            "impact": "moderate",
            "message": "Some page content is not contained by landmarks",
            "relatedNodes": Array [],
          },
        ],
        "failureSummary": "Fix any of the following:
  Some page content is not contained by landmarks",
        "html": "<h1>Header Two</h1>",
        "impact": "moderate",
        "none": Array [],
        "target": Array [
          "h1:nth-child(2)",
        ],
      },
    ],
    "tags": Array [
      "cat.keyboard",
      "best-practice",
    ],
  },
]
`;

exports[`a11y results filter should filter results for matching exception list 2 1`] = `
Array [
  Object {
    "description": "Ensure every HTML document has a lang attribute",
    "help": "<html> element must have a lang attribute",
    "helpUrl": "https://dequeuniversity.com/rules/axe/4.10/html-has-lang?application=axeAPI",
    "id": "html-has-lang",
    "impact": "serious",
    "nodes": Array [
      Object {
        "all": Array [],
        "any": Array [
          CheckResult {
            "data": Object {
              "messageKey": "noLang",
            },
            "id": "has-lang",
            "impact": "serious",
            "message": "The <html> element does not have a lang attribute",
            "relatedNodes": Array [],
          },
        ],
        "failureSummary": "Fix any of the following:
  The <html> element does not have a lang attribute",
        "html": "<html><head></head><body>

<h1>Header One</h1>
<h1>Header Two</h1>
<div id=\\"dom-with-issues\\">
    <a href=\\"#\\"></a>
</div>


</body></html>",
        "impact": "serious",
        "none": Array [],
        "target": Array [
          "html",
        ],
      },
    ],
    "tags": Array [
      "cat.language",
      "wcag2a",
      "wcag311",
      "TTv5",
      "TT11.a",
      "EN-301-549",
      "EN-9.3.1.1",
      "ACT",
    ],
  },
  Object {
    "description": "Ensure all page content is contained by landmarks",
    "help": "All page content should be contained by landmarks",
    "helpUrl": "https://dequeuniversity.com/rules/axe/4.10/region?application=axeAPI",
    "id": "region",
    "impact": "moderate",
    "nodes": Array [
      Object {
        "all": Array [],
        "any": Array [
          CheckResult {
            "data": Object {
              "isIframe": false,
            },
            "id": "region",
            "impact": "moderate",
            "message": "Some page content is not contained by landmarks",
            "relatedNodes": Array [],
          },
        ],
        "failureSummary": "Fix any of the following:
  Some page content is not contained by landmarks",
        "html": "<h1>Header One</h1>",
        "impact": "moderate",
        "none": Array [],
        "target": Array [
          "h1:nth-child(1)",
        ],
      },
      Object {
        "all": Array [],
        "any": Array [
          CheckResult {
            "data": Object {
              "isIframe": false,
            },
            "id": "region",
            "impact": "moderate",
            "message": "Some page content is not contained by landmarks",
            "relatedNodes": Array [],
          },
        ],
        "failureSummary": "Fix any of the following:
  Some page content is not contained by landmarks",
        "html": "<h1>Header Two</h1>",
        "impact": "moderate",
        "none": Array [],
        "target": Array [
          "h1:nth-child(2)",
        ],
      },
    ],
    "tags": Array [
      "cat.keyboard",
      "best-practice",
    ],
  },
]
`;
